fixed failing tests by updating maven-surefire-plugin version to 2.20 from 2.1.7