@@ -11,6 +11,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.6.1</version>
         <configuration>
           <source>1.7</source>
           <target>1.7</target>
@@ -19,16 +20,20 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.7.1</version>
+        <version>2.20</version>
         <configuration>
           <parallel>classes</parallel>
           <threadCount>3</threadCount>
+          <parallelTestsTimeoutForcedInSeconds>60</parallelTestsTimeoutForcedInSeconds>
           <systemPropertyVariables>
             <browsers>phantomjs</browsers>
             <basepath>www.skiutah.com</basepath>
             <buildDirectory>${project.build.directory}</buildDirectory>
             [...]
           </systemPropertyVariables>
+          <forkCount>5</forkCount>
+          <reuseForks>true</reuseForks>
+          <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
         </configuration>
       </plugin>
     </plugins>
